--- a/style/article.css
+++ b/style/article.css
@@ -1,6 +1,6 @@
 article {
         width: 100%;
-        line-height: 1.7;
+        line-height: 2;
 }
 
 article img {
@@ -15,7 +15,7 @@ article>ul {
 article p,
 article>ul {
         opacity: 0.80;
-        margin-bottom: 1em;
+        margin: 0;
 }
 
 article h1,
@@ -24,23 +24,17 @@ article h3,
 article h4,
 article h5,
 article h6 {
-        margin-top: 2.5em;
-        margin-bottom: 0.8em;
-        line-height: 1.3;
-        font-weight: 700;
-        opacity: 0.98;
+        margin: 0;
+        line-height: 1.5;
+        font-weight: 900;
 }
 
 article h1 {
         font-size: 2.4em;
-        border-bottom: 1px solid var(--50);
-        padding-bottom: 0.3em;
 }
 
 article h2 {
         font-size: 2em;
-        border-bottom: 1px solid var(--80);
-        padding-bottom: 0.3em;
 }
 
 article h3 {
@@ -94,14 +88,6 @@ article strong {
 }
 
 article blockquote {
-        margin: 1.5em 0;
-        padding: 0.5em 1.5em;
-        border-left: 4px solid #007bff;
-        background-color: #f8f9fa;
-        color: #555;
-        opacity: 0.9;
-}
-
-article blockquote p {
-        margin-bottom: 0.5em;
+        margin: 0;
+        padding: 0;
 }
