--- a/style/style.css
+++ b/style/style.css
@@ -77,12 +77,6 @@ main {
         gap: 48px;
 }
 
-article,
-aside,
-main {
-        height: 100%
-}
-
 nav {
         display: flex;
         justify-content: space-between;
@@ -127,7 +121,7 @@ aside li {
         transition: 0.04s ease, background-color 0.11s ease, box-shadow 0.1s ease-out;
         border-radius: 999px;
         transform: translateX(-10px);
-        margin-right: 8px;
+        margin-right: 4px;
 }
 
 aside li::before {
@@ -198,7 +192,6 @@ aside li:hover {
 article {
         padding-top: 48px;
         position: relative;
-        animation: fadein 0.6s ease-out
 }
 
 article::before {
@@ -206,9 +199,10 @@ article::before {
         position: absolute;
         top: 0;
         width: 100vw;
-        height: 100%;
+        /* I don't like this... but works for now... TODO: */
+        height: calc(100vh - 82px);
         transform: translateX(-48px);
-        background: radial-gradient(circle at -10% -10%, rgba(0, 255, 255, 0.2) 0%, #ff008c10 2000px, #00000000 3000px);
+        background: radial-gradient(circle at 0% 0%, oklab(86.535% -0.13477 -0.06016 / 0.199) 0%, oklab(46.28% -0.03091 -0.3044 / 0.00) calc(90vh));
         z-index: -1;
         pointer-events: none;
         border-radius: 24px 0 0 0;
@@ -229,25 +223,25 @@ aside li:active,
         position: fixed;
         z-index: 4000;
         left: 0;
-        bottom: 48px;
+        bottom: 32px;
         cursor: pointer;
-        font-size: 24px;
+        font-size: 32px;
         color: var(--90);
         background: var(--10);
-        padding: 16px;
+        padding: 8px;
         padding-left: 22px;
         width: 64px;
         user-select: none;
         border-radius: 0 99px 99px 0;
-        transition: scale 0.05s ease;
+        transition: 0.05s ease;
 }
 
 [menu]:hover {
-        scale: 1.2;
+        box-shadow: 0 0 0 2px var(--10);
 }
 
 [menu]:active {
-        scale: 1.1;
+        box-shadow: 0 0 0 5px var(--10);
 }
 
 [menu_bg] {
@@ -274,18 +268,6 @@ aside li,
         -ms-user-select: none;
         user-select: none;
 }
-
-@keyframes fadein {
-        0% {
-                scale: 0.99;
-                opacity: 0;
-        }
-
-        to {
-                opacity: 1;
-        }
-}
-
 
 @media (max-width: 870px) {
 
