--- a/style/article.css
+++ b/style/article.css
@@ -28,7 +28,7 @@ article>section p {
 
 article section {
         line-height: 1.4;
-        margin-bottom: 48px;
+        margin-bottom: 32px;
 }
 
 tag {
@@ -36,10 +36,11 @@ tag {
         font-size: 14px;
         color: var(--90);
         background-color: var(--10);
-        padding: 5px 10px;
+        padding: 8px 10px;
         border-radius: 99px;
         margin: 8px 0;
         margin-right: 8px;
+        line-height: 1.0;
 }
 
 article h1,
@@ -49,10 +50,11 @@ article h4,
 article h5,
 article h6 {
         margin: 0;
-        font-weight: 900;
+        font-weight: 500;
 }
 
 article h1 {
+        font-weight: 900;
         font-size: 2.4em;
 }
 
